Cleaned Prod File

--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -10,46 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          cleanBarcode         CATEGORY_1              CATEGORY_2  \\\n",
-      "0       100000000519.0             Snacks                 Cookies   \n",
-      "1        10000000054.0             Snacks                 Cookies   \n",
-      "2       100000002278.0             Snacks                   Candy   \n",
-      "3         1000000168.0             Snacks                   Candy   \n",
-      "4        10000003024.0             Snacks             Snack Cakes   \n",
-      "...                ...                ...                     ...   \n",
-      "783468   99999995046.0             Snacks             Snack Cakes   \n",
-      "783469  999999986931.0  Health & Wellness             Bath & Body   \n",
-      "783470  999999994011.0             Snacks      Jerky & Dried Meat   \n",
-      "783471  999999999986.0  Health & Wellness             Bath & Body   \n",
-      "783472  999999999993.0  Health & Wellness  Medicines & Treatments   \n",
-      "\n",
-      "                                 CATEGORY_3 CATEGORY_4  \\\n",
-      "0                                      None       None   \n",
-      "1                                      None       None   \n",
-      "2                          Confection Candy       None   \n",
-      "3                          Confection Candy       None   \n",
-      "4                       Brownie Snack Cakes       None   \n",
-      "...                                     ...        ...   \n",
-      "783468             Pies & Tarts Snack Cakes       None   \n",
-      "783469                       Hand Sanitizer       None   \n",
-      "783470                        Jerky & Bites       None   \n",
-      "783471                             Bar Soap       None   \n",
-      "783472  Pain & Fever Medicines & Treatments       None   \n",
-      "\n",
-      "                    MANUFACTURER            BRAND       BARCODE  \n",
-      "0                        STRAUSS            ELITE  1.000000e+11  \n",
-      "1                        STRAUSS            ELITE  1.000000e+10  \n",
-      "2       PLACEHOLDER MANUFACTURER  BRAND NOT KNOWN  1.000000e+11  \n",
-      "3                           None             None  1.000000e+09  \n",
-      "4                           None             None  1.000000e+10  \n",
-      "...                          ...              ...           ...  \n",
-      "783468                      None             None  1.000000e+11  \n",
-      "783469                      None             None  1.000000e+12  \n",
-      "783470  MONOGRAM MEAT SNACKS LLC       WILD BILLS  1.000000e+12  \n",
-      "783471                      None             None  1.000000e+12  \n",
-      "783472                   7ELEVEN          7ELEVEN  1.000000e+12  \n",
-      "\n",
-      "[783473 rows x 8 columns]\n"
+      "Empty DataFrame\n",
+      "Columns: [cleanBarcode, count]\n",
+      "Index: []\n"
      ]
     }
    ],
@@ -72,21 +35,20 @@
     "trans.to_sql(\"transactions\", conn, index=False, if_exists=\"replace\")\n",
     "users.to_sql(\"users\", conn, index=False, if_exists=\"replace\")\n",
     "\n",
-    "# Data Validation\n",
+    "# Cleaning product data\n",
     "\n",
-    "\n",
-    "query1 = \"\"\" SELECT CAST( barcode AS TEXT) AS cleanBarcode, COUNT(*) AS count\n",
+    "conn.execute( \"\"\"CREATE TABLE products_cleaned AS \n",
+    "SELECT CAST( barcode AS TEXT) AS cleanBarcode, CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4, BRAND\n",
     "FROM products\n",
-    "GROUP BY CAST( barcode AS TEXT)\n",
+    "WHERE BARCODE IS NOT NULL\n",
+    "GROUP BY CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4, BRAND\"\"\") \n",
+    "\n",
+    "conn.commit()\n",
+    "\n",
+    "query = \"\"\" SELECT cleanBarcode, COUNT(*) AS count\n",
+    "FROM products_cleaned\n",
+    "GROUP BY cleanBarcode\n",
     "HAVING count > 1 \"\"\"\n",
-    "\n",
-    "query = \"\"\" SELECT CAST( barcode AS TEXT) AS cleanBarcode, *\n",
-    "FROM products\n",
-    "WHERE CAST( barcode AS TEXT) IS NOT NULL\n",
-    "GROUP BY *\n",
-    "ORDER BY CAST( barcode AS TEXT)\"\"\"\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "df = pd.read_sql_query(query, conn)\n",
