Prod File Testing

--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [cleanBarcode, count]\n",
-      "Index: []\n"
+      "   CATEGORY_1    CATEGORY_2        CATEGORY_3 CATEGORY_4\n",
+      "0      Snacks  Dips & Salsa              None       None\n",
+      "1      Snacks  Dips & Salsa          Bean Dip       None\n",
+      "2      Snacks  Dips & Salsa        Cheese Dip       None\n",
+      "3      Snacks  Dips & Salsa      Dessert Dips       None\n",
+      "4      Snacks  Dips & Salsa         Dip Mixes       None\n",
+      "5      Snacks  Dips & Salsa  French Onion Dip       None\n",
+      "6      Snacks  Dips & Salsa         Guacamole       None\n",
+      "7      Snacks  Dips & Salsa            Hummus       None\n",
+      "8      Snacks  Dips & Salsa        Other Dips       None\n",
+      "9      Snacks  Dips & Salsa         Ranch Dip       None\n",
+      "10     Snacks  Dips & Salsa             Salsa       None\n"
      ]
     }
    ],
@@ -45,10 +54,13 @@
     "\n",
     "conn.commit()\n",
     "\n",
-    "query = \"\"\" SELECT cleanBarcode, COUNT(*) AS count\n",
+    "query = \"\"\" SELECT CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4\n",
     "FROM products_cleaned\n",
-    "GROUP BY cleanBarcode\n",
-    "HAVING count > 1 \"\"\"\n",
+    "WHERE CATEGORY_2 like '%Dips & Salsa%'\n",
+    "GROUP BY CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4\n",
+    "ORDER BY CATEGORY_2\n",
+    "LIMIT 100\n",
+    "\"\"\"\n",
     "\n",
     "\n",
     "df = pd.read_sql_query(query, conn)\n",
