Clean Users File

--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -10,18 +10,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   CATEGORY_1    CATEGORY_2        CATEGORY_3 CATEGORY_4\n",
-      "0      Snacks  Dips & Salsa              None       None\n",
-      "1      Snacks  Dips & Salsa          Bean Dip       None\n",
-      "2      Snacks  Dips & Salsa        Cheese Dip       None\n",
-      "3      Snacks  Dips & Salsa      Dessert Dips       None\n",
-      "4      Snacks  Dips & Salsa         Dip Mixes       None\n",
-      "5      Snacks  Dips & Salsa  French Onion Dip       None\n",
-      "6      Snacks  Dips & Salsa         Guacamole       None\n",
-      "7      Snacks  Dips & Salsa            Hummus       None\n",
-      "8      Snacks  Dips & Salsa        Other Dips       None\n",
-      "9      Snacks  Dips & Salsa         Ranch Dip       None\n",
-      "10     Snacks  Dips & Salsa             Salsa       None\n"
+      "                          ID cleanedCreatedDate cleanedBirthDate STATE  \\\n",
+      "0   5351b1efe4b0e3638af82697         2014-04-18       1995-01-12  None   \n",
+      "1   536178cfe4b012a86bd734f0         2014-04-30       1990-01-23  None   \n",
+      "2   5364098ae4b0a1ed6a0c2f85         2014-05-02       1995-01-19  None   \n",
+      "3   536409c8e4b060d2e95bb71b         2014-05-02       1993-04-07  None   \n",
+      "4   53640a0ee4b060d2e95bb7a9         2014-05-02       1968-08-09  None   \n",
+      "..                       ...                ...              ...   ...   \n",
+      "95  56c90241e4b089775946f2a8         2016-02-21       1986-04-15  None   \n",
+      "96  56ca2b6ee4b03934a7909b36         2016-02-21       1971-07-26  None   \n",
+      "97  56d42b85e4b0cad901c0bb9c         2016-02-29       1950-04-29    MA   \n",
+      "98  56d6be26e4b086f9a34e57d9         2016-03-02       1989-11-03    PR   \n",
+      "99  56db73bee4b0796561f73ffd         2016-03-06       1983-07-15  None   \n",
+      "\n",
+      "   LANGUAGE  GENDER  \n",
+      "0      None    None  \n",
+      "1      None    None  \n",
+      "2      None    None  \n",
+      "3      None    None  \n",
+      "4      None    None  \n",
+      "..      ...     ...  \n",
+      "95     None  female  \n",
+      "96     None    male  \n",
+      "97       en  female  \n",
+      "98     None  female  \n",
+      "99     None  female  \n",
+      "\n",
+      "[100 rows x 6 columns]\n"
      ]
     }
    ],
@@ -44,7 +59,7 @@
     "trans.to_sql(\"transactions\", conn, index=False, if_exists=\"replace\")\n",
     "users.to_sql(\"users\", conn, index=False, if_exists=\"replace\")\n",
     "\n",
-    "# Cleaning product data\n",
+    "# Cleaning PRODUCTS data, remove duplicates, remove nulls, change barcode data format from scientific notations to string\n",
     "\n",
     "conn.execute( \"\"\"CREATE TABLE products_cleaned AS \n",
     "SELECT CAST( barcode AS TEXT) AS cleanBarcode, CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4, BRAND\n",
@@ -52,13 +67,32 @@
     "WHERE BARCODE IS NOT NULL\n",
     "GROUP BY CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4, BRAND\"\"\") \n",
     "\n",
+    "# Cleaning USERS data, remove duplicates, remove nulls, removed the timestamp since it isn't relevant for our exercise\n",
+    "\n",
+    "conn.execute( \"\"\"CREATE TABLE users_cleaned AS \n",
+    "SELECT \n",
+    "    ID, \n",
+    "    DATE(REPLACE(CREATED_DATE, 'Z', '')) AS cleanedCreatedDate, \n",
+    "    DATE(REPLACE(BIRTH_DATE, 'Z', '')) AS cleanedBirthDate, \n",
+    "    STATE, LANGUAGE, GENDER\n",
+    "FROM users\n",
+    "WHERE ID IS NOT NULL\n",
+    "GROUP BY ID, CAST( CREATED_DATE AS DATE), CAST(BIRTH_DATE AS DATE), STATE, LANGUAGE, GENDER\"\"\") \n",
+    "\n",
     "conn.commit()\n",
     "\n",
-    "query = \"\"\" SELECT CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4\n",
+    "query1 = \"\"\" SELECT CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4\n",
     "FROM products_cleaned\n",
     "WHERE CATEGORY_2 like '%Dips & Salsa%'\n",
     "GROUP BY CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4\n",
     "ORDER BY CATEGORY_2\n",
+    "LIMIT 100\n",
+    "\"\"\"\n",
+    "\n",
+    "query = \"\"\" SELECT ID, CleanedCreatedDate, cleanedBirthDate, STATE, LANGUAGE, GENDER\n",
+    "FROM users_cleaned\n",
+    "GROUP BY ID, CleanedCreatedDate, cleanedBirthDate, STATE, LANGUAGE, GENDER\n",
+    "ORDER BY ID\n",
     "LIMIT 100\n",
     "\"\"\"\n",
     "\n",
