--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -43,6 +43,8 @@
     "WHERE BARCODE IS NOT NULL\n",
     "GROUP BY CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4, BRAND\"\"\") \n",
     "\n",
+    "# Cleaning TRANSACTIONS data\n",
+    "\n",
     "# Cleaning USERS data, remove duplicates, remove nulls, removed the timestamp since it isn't relevant for our exercise\n",
     "\n",
     "conn.execute( \"\"\"CREATE TABLE users_cleaned AS \n",
@@ -56,6 +58,8 @@
     "GROUP BY ID, CAST( CREATED_DATE AS DATE), CAST(BIRTH_DATE AS DATE), STATE, LANGUAGE, GENDER\"\"\") \n",
     "\n",
     "conn.commit()\n",
+    "\n",
+    "## Here are a my queries. This is where I am testing the results of my new tables\n",
     "\n",
     "query1 = \"\"\" SELECT CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4\n",
     "FROM products_cleaned\n",
