--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -10,9 +10,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [ID, COUNT(*)]\n",
-      "Index: []\n"
+      "                          ID         CREATED_DATE           BIRTH_DATE STATE  \\\n",
+      "0   5351b1efe4b0e3638af82697  2014-04-18 23:14:55  1995-01-12 00:00:00  None   \n",
+      "1   536178cfe4b012a86bd734f0  2014-04-30 22:27:27  1990-01-23 00:00:00  None   \n",
+      "2   5364098ae4b0a1ed6a0c2f85  2014-05-02 21:09:30  1995-01-19 00:00:00  None   \n",
+      "3   536409c8e4b060d2e95bb71b  2014-05-02 21:10:32  1993-04-07 00:00:00  None   \n",
+      "4   53640a0ee4b060d2e95bb7a9  2014-05-02 21:11:42  1968-08-09 00:00:00  None   \n",
+      "..                       ...                  ...                  ...   ...   \n",
+      "95  56c90241e4b089775946f2a8  2016-02-21 00:18:09  1986-04-15 00:00:00  None   \n",
+      "96  56ca2b6ee4b03934a7909b36  2016-02-21 21:26:06  1971-07-26 00:00:00  None   \n",
+      "97  56d42b85e4b0cad901c0bb9c  2016-02-29 11:29:09  1950-04-29 05:00:00    MA   \n",
+      "98  56d6be26e4b086f9a34e57d9  2016-03-02 10:19:18  1989-11-03 00:00:00    PR   \n",
+      "99  56db73bee4b0796561f73ffd  2016-03-06 00:03:10  1983-07-15 00:00:00  None   \n",
+      "\n",
+      "   LANGUAGE  GENDER  \n",
+      "0      None    None  \n",
+      "1      None    None  \n",
+      "2      None    None  \n",
+      "3      None    None  \n",
+      "4      None    None  \n",
+      "..      ...     ...  \n",
+      "95     None  female  \n",
+      "96     None    male  \n",
+      "97       en  female  \n",
+      "98     None  female  \n",
+      "99     None  female  \n",
+      "\n",
+      "[100 rows x 6 columns]\n"
      ]
     }
    ],
@@ -43,19 +67,28 @@
     "WHERE BARCODE IS NOT NULL\n",
     "GROUP BY CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4, BRAND\"\"\") \n",
     "\n",
-    "# Cleaning TRANSACTIONS data\n",
+    "# Cleaning TRANSACTIONS data, change barcode data format from scientific notations to string\n",
+    "conn.execute(\"\"\"CREATE TABLE transactions_cleaned AS \n",
+    "SELECT \n",
+    "    CAST( barcode AS TEXT) AS cleanBarcode, \n",
+    "    RECEIPT_ID, \n",
+    "    DATETIME(PURCHASE_DATE) AS PURCHASE_DATE, \n",
+    "    DATETIME(SCAN_DATE) AS SCAN_DATE, STORE_NAME, USER_ID,\n",
+    "    FINAL_QUANTITY, FINAL_SALE\n",
+    "    \n",
+    "FROM transactions\"\"\") \n",
     "\n",
-    "# Cleaning USERS data, remove duplicates, remove nulls, removed the timestamp since it isn't relevant for our exercise\n",
+    "# Cleaning USERS data, remove duplicates, remove nulls\n",
     "\n",
     "conn.execute( \"\"\"CREATE TABLE users_cleaned AS \n",
     "SELECT \n",
     "    ID, \n",
-    "    DATE(REPLACE(CREATED_DATE, 'Z', '')) AS cleanedCreatedDate, \n",
-    "    DATE(REPLACE(BIRTH_DATE, 'Z', '')) AS cleanedBirthDate, \n",
+    "    DATETIME(CREATED_DATE) AS CREATED_DATE, \n",
+    "    DATETIME(BIRTH_DATE) AS BIRTH_DATE, \n",
     "    STATE, LANGUAGE, GENDER\n",
     "FROM users\n",
     "WHERE ID IS NOT NULL\n",
-    "GROUP BY ID, CAST( CREATED_DATE AS DATE), CAST(BIRTH_DATE AS DATE), STATE, LANGUAGE, GENDER\"\"\") \n",
+    "GROUP BY ID, DATETIME(CREATED_DATE), DATETIME(BIRTH_DATE), STATE, LANGUAGE, GENDER\"\"\") \n",
     "\n",
     "conn.commit()\n",
     "\n",
@@ -69,11 +102,14 @@
     "LIMIT 100\n",
     "\"\"\"\n",
     "\n",
-    "query = \"\"\" SELECT ID, COUNT(*)\n",
+    "query2 = \"\"\" SELECT *\n",
     "FROM users_cleaned\n",
-    "GROUP BY ID\n",
-    "HAVING COUNT(*) > 1\n",
     "LIMIT 100\n",
+    "\"\"\"\n",
+    "\n",
+    "query = \"\"\" SELECT *\n",
+    "FROM transactions_cleaned\n",
+    "LIMIT 10\n",
     "\"\"\"\n",
     "\n",
     "\n",
