Transaction File Testing

--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -10,33 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                          ID         CREATED_DATE           BIRTH_DATE STATE  \\\n",
-      "0   5351b1efe4b0e3638af82697  2014-04-18 23:14:55  1995-01-12 00:00:00  None   \n",
-      "1   536178cfe4b012a86bd734f0  2014-04-30 22:27:27  1990-01-23 00:00:00  None   \n",
-      "2   5364098ae4b0a1ed6a0c2f85  2014-05-02 21:09:30  1995-01-19 00:00:00  None   \n",
-      "3   536409c8e4b060d2e95bb71b  2014-05-02 21:10:32  1993-04-07 00:00:00  None   \n",
-      "4   53640a0ee4b060d2e95bb7a9  2014-05-02 21:11:42  1968-08-09 00:00:00  None   \n",
-      "..                       ...                  ...                  ...   ...   \n",
-      "95  56c90241e4b089775946f2a8  2016-02-21 00:18:09  1986-04-15 00:00:00  None   \n",
-      "96  56ca2b6ee4b03934a7909b36  2016-02-21 21:26:06  1971-07-26 00:00:00  None   \n",
-      "97  56d42b85e4b0cad901c0bb9c  2016-02-29 11:29:09  1950-04-29 05:00:00    MA   \n",
-      "98  56d6be26e4b086f9a34e57d9  2016-03-02 10:19:18  1989-11-03 00:00:00    PR   \n",
-      "99  56db73bee4b0796561f73ffd  2016-03-06 00:03:10  1983-07-15 00:00:00  None   \n",
-      "\n",
-      "   LANGUAGE  GENDER  \n",
-      "0      None    None  \n",
-      "1      None    None  \n",
-      "2      None    None  \n",
-      "3      None    None  \n",
-      "4      None    None  \n",
-      "..      ...     ...  \n",
-      "95     None  female  \n",
-      "96     None    male  \n",
-      "97       en  female  \n",
-      "98     None  female  \n",
-      "99     None  female  \n",
-      "\n",
-      "[100 rows x 6 columns]\n"
+      "   COUNT(*)\n",
+      "0      5762\n"
      ]
     }
    ],
@@ -107,8 +82,9 @@
     "LIMIT 100\n",
     "\"\"\"\n",
     "\n",
-    "query = \"\"\" SELECT *\n",
+    "query = \"\"\" SELECT COUNT(*)\n",
     "FROM transactions_cleaned\n",
+    "WHERE cleanBarcode is null\n",
     "LIMIT 10\n",
     "\"\"\"\n",
     "\n",
