Transaction File Testing Continued

--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "   COUNT(*)\n",
-      "0      5762\n"
+      "0     49829\n"
      ]
     }
    ],
@@ -51,7 +51,8 @@
     "    DATETIME(SCAN_DATE) AS SCAN_DATE, STORE_NAME, USER_ID,\n",
     "    FINAL_QUANTITY, FINAL_SALE\n",
     "    \n",
-    "FROM transactions\"\"\") \n",
+    "FROM transactions \"\"\") \n",
+    "##GROUP BY CAST( barcode AS TEXT), RECEIPT_ID,  DATETIME(PURCHASE_DATE),  DATETIME(SCAN_DATE), FINAL_QUANTITY, FINAL_SALE\n",
     "\n",
     "# Cleaning USERS data, remove duplicates, remove nulls\n",
     "\n",
@@ -82,12 +83,15 @@
     "LIMIT 100\n",
     "\"\"\"\n",
     "\n",
-    "query = \"\"\" SELECT COUNT(*)\n",
+    "query3 = \"\"\" SELECT COUNT(*)\n",
     "FROM transactions_cleaned\n",
     "WHERE cleanBarcode is null\n",
     "LIMIT 10\n",
     "\"\"\"\n",
-    "\n",
+    "query= \"\"\" SELECT COUNT(*)\n",
+    "FROM transactions_cleaned\n",
+    "LIMIT 10\n",
+    "\"\"\"\n",
     "\n",
     "df = pd.read_sql_query(query, conn)\n",
     "print(df)\n"
