Transaction Validation Testing Pt2

--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   COUNT(*)\n",
-      "0     49829\n"
+      "Empty DataFrame\n",
+      "Columns: [cleanQty, SUM(FINAL_SALE), COUNT(*)]\n",
+      "Index: []\n"
      ]
     }
    ],
@@ -49,9 +50,10 @@
     "    RECEIPT_ID, \n",
     "    DATETIME(PURCHASE_DATE) AS PURCHASE_DATE, \n",
     "    DATETIME(SCAN_DATE) AS SCAN_DATE, STORE_NAME, USER_ID,\n",
-    "    FINAL_QUANTITY, FINAL_SALE\n",
+    "    FINAL_QUANTITY AS cleanQty, FINAL_SALE\n",
     "    \n",
-    "FROM transactions \"\"\") \n",
+    "FROM transactions\n",
+    "WHERE FINAL_QUANTITY != 'zero'\"\"\") \n",
     "##GROUP BY CAST( barcode AS TEXT), RECEIPT_ID,  DATETIME(PURCHASE_DATE),  DATETIME(SCAN_DATE), FINAL_QUANTITY, FINAL_SALE\n",
     "\n",
     "# Cleaning USERS data, remove duplicates, remove nulls\n",
@@ -88,9 +90,34 @@
     "WHERE cleanBarcode is null\n",
     "LIMIT 10\n",
     "\"\"\"\n",
-    "query= \"\"\" SELECT COUNT(*)\n",
+    "\n",
+    "query4 = \"\"\" SELECT   cleanBarcode, \n",
+    "    RECEIPT_ID, \n",
+    "    PURCHASE_DATE, \n",
+    "    SCAN_DATE, STORE_NAME, USER_ID,\n",
+    "    FINAL_QUANTITY, FINAL_SALE, COUNT(*)\n",
     "FROM transactions_cleaned\n",
+    "GROUP BY cleanBarcode, RECEIPT_ID, PURCHASE_DATE, SCAN_DATE, STORE_NAME, USER_ID, FINAL_QUANTITY, FINAL_SALE\n",
+    "HAVING  COUNT(*) > 1\n",
     "LIMIT 10\n",
+    "\"\"\"\n",
+    "\n",
+    "query5 = \"\"\"SELECT cleanBarcode, PURCHASE_DATE, FINAL_SALE, FINAL_QUANTITY, COUNT(*)\n",
+    "FROM transactions_cleaned\n",
+    "GROUP BY cleanBarcode, FINAL_SALE, FINAL_QUANTITY\n",
+    "HAVING  COUNT(*) > 1\"\"\"\n",
+    "\n",
+    "##validates cleanBarcode for transaction data\n",
+    "query6 = \"\"\"SELECT cleanBarcode, FINAL_SALE, cleanQty, COUNT(*)\n",
+    "FROM transactions_cleaned\n",
+    "WHERE cleanBarcode IS NULL OR cleanBarcode = '0.0' OR cleanBarcode = '-1.0'\n",
+    "GROUP BY cleanBarcode, FINAL_SALE, cleanQty\n",
+    "\"\"\"\n",
+    "\n",
+    "query = \"\"\"SELECT cleanQty, SUM(FINAL_SALE), COUNT(*)\n",
+    "FROM transactions_cleaned\n",
+    "WHERE cleanQty = 0\n",
+    "GROUP BY cleanQty\n",
     "\"\"\"\n",
     "\n",
     "df = pd.read_sql_query(query, conn)\n",
