--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [cleanQty, SUM(FINAL_SALE), COUNT(*)]\n",
-      "Index: []\n"
+      "   SUM(cleanQty)  SUM(FINAL_SALE)  COUNT(*)\n",
+      "0       40721.34        114241.73     37500\n"
      ]
     }
    ],
@@ -43,7 +42,7 @@
     "WHERE BARCODE IS NOT NULL\n",
     "GROUP BY CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4, BRAND\"\"\") \n",
     "\n",
-    "# Cleaning TRANSACTIONS data, change barcode data format from scientific notations to string\n",
+    "# Cleaning TRANSACTIONS data, change barcode data format from scientific notations to string, removes erroneous zero lines,\n",
     "conn.execute(\"\"\"CREATE TABLE transactions_cleaned AS \n",
     "SELECT \n",
     "    CAST( barcode AS TEXT) AS cleanBarcode, \n",
@@ -72,6 +71,7 @@
     "\n",
     "## Here are a my queries. This is where I am testing the results of my new tables\n",
     "\n",
+    "###Testing the product file\n",
     "query1 = \"\"\" SELECT CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4\n",
     "FROM products_cleaned\n",
     "WHERE CATEGORY_2 like '%Dips & Salsa%'\n",
@@ -79,12 +79,13 @@
     "ORDER BY CATEGORY_2\n",
     "LIMIT 100\n",
     "\"\"\"\n",
-    "\n",
+    "###Testing the users file\n",
     "query2 = \"\"\" SELECT *\n",
     "FROM users_cleaned\n",
     "LIMIT 100\n",
     "\"\"\"\n",
     "\n",
+    "###Testing the transactions file\n",
     "query3 = \"\"\" SELECT COUNT(*)\n",
     "FROM transactions_cleaned\n",
     "WHERE cleanBarcode is null\n",
@@ -108,16 +109,14 @@
     "HAVING  COUNT(*) > 1\"\"\"\n",
     "\n",
     "##validates cleanBarcode for transaction data\n",
-    "query6 = \"\"\"SELECT cleanBarcode, FINAL_SALE, cleanQty, COUNT(*)\n",
+    "query = \"\"\"SELECT SUM(cleanQty), SUM(FINAL_SALE), COUNT(*)\n",
     "FROM transactions_cleaned\n",
-    "WHERE cleanBarcode IS NULL OR cleanBarcode = '0.0' OR cleanBarcode = '-1.0'\n",
-    "GROUP BY cleanBarcode, FINAL_SALE, cleanQty\n",
     "\"\"\"\n",
     "\n",
-    "query = \"\"\"SELECT cleanQty, SUM(FINAL_SALE), COUNT(*)\n",
+    "query6 = \"\"\"SELECT cleanBarcode, SUM(cleanQty), SUM(FINAL_SALE), COUNT(*)\n",
     "FROM transactions_cleaned\n",
-    "WHERE cleanQty = 0\n",
-    "GROUP BY cleanQty\n",
+    "WHERE cleanBarcode IS NULL OR cleanBarcode = '0.0' OR cleanBarcode = '-1.0'\n",
+    "GROUP BY cleanBarcode\n",
     "\"\"\"\n",
     "\n",
     "df = pd.read_sql_query(query, conn)\n",
