--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   SUM(cleanQty)  SUM(FINAL_SALE)  COUNT(*)\n",
-      "0       40721.34        114241.73     37500\n"
+      "   cleanQty  SUM(FINAL_SALE)  COUNT(*)\n",
+      "0      0.01             0.05         1\n",
+      "1      0.09             0.12         2\n",
+      "2      0.23             1.74         4\n",
+      "3      0.28             1.16         1\n",
+      "4      0.35             1.05         1\n",
+      "..      ...              ...       ...\n",
+      "61     6.00           116.20        20\n",
+      "62     6.22             4.79         1\n",
+      "63     7.00            28.23         5\n",
+      "64     8.00            84.78         8\n",
+      "65     9.00            60.48         2\n",
+      "\n",
+      "[66 rows x 3 columns]\n"
      ]
     }
    ],
@@ -52,8 +64,9 @@
     "    FINAL_QUANTITY AS cleanQty, FINAL_SALE\n",
     "    \n",
     "FROM transactions\n",
-    "WHERE FINAL_QUANTITY != 'zero'\"\"\") \n",
-    "##GROUP BY CAST( barcode AS TEXT), RECEIPT_ID,  DATETIME(PURCHASE_DATE),  DATETIME(SCAN_DATE), FINAL_QUANTITY, FINAL_SALE\n",
+    "WHERE FINAL_QUANTITY != 'zero' AND \n",
+    "        (CAST( barcode AS TEXT) IS NOT NULL AND CAST( barcode AS TEXT) NOT IN (-1.0,'-1.0'))\"\"\") \n",
+    "\n",
     "\n",
     "# Cleaning USERS data, remove duplicates, remove nulls\n",
     "\n",
@@ -79,6 +92,7 @@
     "ORDER BY CATEGORY_2\n",
     "LIMIT 100\n",
     "\"\"\"\n",
+    "\n",
     "###Testing the users file\n",
     "query2 = \"\"\" SELECT *\n",
     "FROM users_cleaned\n",
@@ -109,14 +123,16 @@
     "HAVING  COUNT(*) > 1\"\"\"\n",
     "\n",
     "##validates cleanBarcode for transaction data\n",
-    "query = \"\"\"SELECT SUM(cleanQty), SUM(FINAL_SALE), COUNT(*)\n",
+    "query6 = \"\"\"SELECT SUM(cleanQty), SUM(FINAL_SALE), COUNT(*)\n",
     "FROM transactions_cleaned\n",
+    "WHERE cleanBarcode = '-1.0'\n",
     "\"\"\"\n",
     "\n",
-    "query6 = \"\"\"SELECT cleanBarcode, SUM(cleanQty), SUM(FINAL_SALE), COUNT(*)\n",
+    "query = \"\"\"SELECT cleanQty, SUM(FINAL_SALE), COUNT(*)\n",
     "FROM transactions_cleaned\n",
-    "WHERE cleanBarcode IS NULL OR cleanBarcode = '0.0' OR cleanBarcode = '-1.0'\n",
-    "GROUP BY cleanBarcode\n",
+    "WHERE cleanQty like '%.%'\n",
+    "GROUP BY cleanQty\n",
+    "\n",
     "\"\"\"\n",
     "\n",
     "df = pd.read_sql_query(query, conn)\n",
