--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -10,20 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   cleanQty  SUM(FINAL_SALE)  COUNT(*)\n",
-      "0      0.01             0.05         1\n",
-      "1      0.09             0.12         2\n",
-      "2      0.23             1.74         4\n",
-      "3      0.28             1.16         1\n",
-      "4      0.35             1.05         1\n",
-      "..      ...              ...       ...\n",
-      "61     6.00           116.20        20\n",
-      "62     6.22             4.79         1\n",
-      "63     7.00            28.23         5\n",
-      "64     8.00            84.78         8\n",
-      "65     9.00            60.48         2\n",
-      "\n",
-      "[66 rows x 3 columns]\n"
+      "   SUM(cleanQty)  SUM(FINAL_SALE)  COUNT(*)\n",
+      "0       35908.55         99871.23     33022\n"
      ]
     }
    ],
@@ -65,7 +53,9 @@
     "    \n",
     "FROM transactions\n",
     "WHERE FINAL_QUANTITY != 'zero' AND \n",
-    "        (CAST( barcode AS TEXT) IS NOT NULL AND CAST( barcode AS TEXT) NOT IN (-1.0,'-1.0'))\"\"\") \n",
+    "        (CAST( barcode AS TEXT) IS NOT NULL AND CAST( barcode AS TEXT) NOT IN (-1.0,'-1.0'))\n",
+    "GROUP BY CAST( barcode AS TEXT), RECEIPT_ID, DATETIME(PURCHASE_DATE), DATETIME(SCAN_DATE), \n",
+    "             STORE_NAME, USER_ID, FINAL_QUANTITY, FINAL_SALE\"\"\") \n",
     "\n",
     "\n",
     "# Cleaning USERS data, remove duplicates, remove nulls\n",
@@ -128,10 +118,9 @@
     "WHERE cleanBarcode = '-1.0'\n",
     "\"\"\"\n",
     "\n",
-    "query = \"\"\"SELECT cleanQty, SUM(FINAL_SALE), COUNT(*)\n",
+    "query = \"\"\"SELECT SUM(cleanQty), SUM(FINAL_SALE), COUNT(*)\n",
     "FROM transactions_cleaned\n",
-    "WHERE cleanQty like '%.%'\n",
-    "GROUP BY cleanQty\n",
+    "LIMIT 10\n",
     "\n",
     "\"\"\"\n",
     "\n",
