--- a/DataValidation.ipynb
+++ b/DataValidation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   SUM(cleanQty)  SUM(FINAL_SALE)  COUNT(*)       MIN(SCAN_DATE)  \\\n",
-      "0       35908.55         99871.23     33022  2024-06-12 06:36:34   \n",
-      "\n",
-      "        MAX(SCAN_DATE)  \n",
-      "0  2024-09-08 23:07:19  \n",
-      "   SUM(cleanQty)  SUM(FINAL_SALE)  COUNT(*)   MIN(PURCHASE_DATE)  \\\n",
-      "0       35908.55         99871.23     33022  2024-06-12 00:00:00   \n",
-      "\n",
-      "    MAX(PURCHASE_DATE)  \n",
-      "0  2024-09-08 00:00:00  \n"
+      "   SUM(cleanQty)  SUM(FINAL_SALE)  COUNT(*)\n",
+      "0       35908.55         99871.23     33022\n"
      ]
     }
    ],
@@ -83,7 +75,7 @@
     "## Here are a my queries. This is where I am testing the results of my new tables\n",
     "\n",
     "###Testing the product file\n",
-    "queryA = \"\"\" SELECT CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4\n",
+    "query1 = \"\"\" SELECT CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4\n",
     "FROM products_cleaned\n",
     "WHERE CATEGORY_2 like '%Dips & Salsa%'\n",
     "GROUP BY CATEGORY_1, CATEGORY_2, CATEGORY_3, CATEGORY_4\n",
@@ -92,40 +84,48 @@
     "\"\"\"\n",
     "\n",
     "###Testing the users file\n",
-    "queryB = \"\"\" SELECT *\n",
+    "query2 = \"\"\" SELECT *\n",
     "FROM users_cleaned\n",
     "LIMIT 100\n",
     "\"\"\"\n",
     "\n",
     "###Testing the transactions file\n",
-    "queryC = \"\"\" SELECT COUNT(*)\n",
+    "query3 = \"\"\" SELECT COUNT(*)\n",
     "FROM transactions_cleaned\n",
     "WHERE cleanBarcode is null\n",
     "LIMIT 10\n",
     "\"\"\"\n",
     "\n",
-    "###This answers: Which is the leading brand in the Dips & Salsa category?\n",
-    "queryD = \"\"\"SELECT BRAND, SUM(cleanQty), SUM(FINAL_SALE), COUNT(*)\n",
-    "FROM transactions_cleaned trs left join products_cleaned prd on trs.cleanBarcode = prd.cleanBarcode\n",
-    "WHERE CATEGORY_2 like '%Dips & Salsa%'\n",
-    "GROUP BY BRAND\n",
-    "ORDER BY SUM(FINAL_SALE) DESC\"\"\"\n",
+    "query4 = \"\"\" SELECT   cleanBarcode, \n",
+    "    RECEIPT_ID, \n",
+    "    PURCHASE_DATE, \n",
+    "    SCAN_DATE, STORE_NAME, USER_ID,\n",
+    "    FINAL_QUANTITY, FINAL_SALE, COUNT(*)\n",
+    "FROM transactions_cleaned\n",
+    "GROUP BY cleanBarcode, RECEIPT_ID, PURCHASE_DATE, SCAN_DATE, STORE_NAME, USER_ID, FINAL_QUANTITY, FINAL_SALE\n",
+    "HAVING  COUNT(*) > 1\n",
+    "LIMIT 10\n",
+    "\"\"\"\n",
     "\n",
-    "###This answers: Which is the leading brand in the Dips & Salsa category?\n",
+    "query5 = \"\"\"SELECT cleanBarcode, PURCHASE_DATE, FINAL_SALE, FINAL_QUANTITY, COUNT(*)\n",
+    "FROM transactions_cleaned\n",
+    "GROUP BY cleanBarcode, FINAL_SALE, FINAL_QUANTITY\n",
+    "HAVING  COUNT(*) > 1\"\"\"\n",
     "\n",
+    "##validates cleanBarcode for transaction data\n",
+    "query6 = \"\"\"SELECT SUM(cleanQty), SUM(FINAL_SALE), COUNT(*)\n",
+    "FROM transactions_cleaned\n",
+    "WHERE cleanBarcode = '-1.0'\n",
+    "\"\"\"\n",
     "\n",
-    "query2 = \"\"\"SELECT SUM(cleanQty), SUM(FINAL_SALE), COUNT(*), MIN(SCAN_DATE), MAX(SCAN_DATE)\n",
-    "FROM transactions_cleaned trs left join products_cleaned prd on trs.cleanBarcode = prd.cleanBarcode\"\"\"\n",
+    "query = \"\"\"SELECT SUM(cleanQty), SUM(FINAL_SALE), COUNT(*)\n",
+    "FROM transactions_cleaned\n",
+    "LIMIT 10\n",
     "\n",
-    "query3 = \"\"\"SELECT SUM(cleanQty), SUM(FINAL_SALE), COUNT(*), MIN(PURCHASE_DATE), MAX(PURCHASE_DATE)\n",
-    "FROM transactions_cleaned trs\"\"\"\n",
+    "\"\"\"\n",
     "\n",
-    "#df = pd.read_sql_query(query1, conn)\n",
-    "df2 = pd.read_sql_query(query2, conn)\n",
-    "df3 = pd.read_sql_query(query3, conn)\n",
-    "#print(df)\n",
-    "print(df2)\n",
-    "print(df3)\n"
+    "df = pd.read_sql_query(query, conn)\n",
+    "print(df)\n"
    ]
   }
  ],
