--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   SUM(cleanQty)  SUM(FINAL_SALE)  COUNT(*)       MIN(SCAN_DATE)  \\\n",
-      "0       35908.55         99871.23     33022  2024-06-12 06:36:34   \n",
+      "   Users_TransFile\n",
+      "0            16062\n",
+      "Empty DataFrame\n",
+      "Columns: [ID]\n",
+      "Index: []\n",
+      "   COUNT(DISTINCT USER_ID)  SUM(cleanQty)  SUM(FINAL_SALE)  COUNT(*)  \\\n",
+      "0                       84          178.0           541.12       173   \n",
       "\n",
-      "        MAX(SCAN_DATE)  \n",
-      "0  2024-09-08 23:07:19  \n",
-      "   SUM(cleanQty)  SUM(FINAL_SALE)  COUNT(*)   MIN(PURCHASE_DATE)  \\\n",
-      "0       35908.55         99871.23     33022  2024-06-12 00:00:00   \n",
-      "\n",
-      "    MAX(PURCHASE_DATE)  \n",
-      "0  2024-09-08 00:00:00  \n"
+      "    MIN(PURCHASE_DATE)   MAX(PURCHASE_DATE)  \n",
+      "0  2024-06-12 00:00:00  2024-09-08 00:00:00  \n"
      ]
     }
    ],
@@ -56,27 +56,27 @@
     "    CAST( barcode AS TEXT) AS cleanBarcode, \n",
     "    RECEIPT_ID, \n",
     "    DATETIME(PURCHASE_DATE) AS PURCHASE_DATE, \n",
-    "    DATETIME(SCAN_DATE) AS SCAN_DATE, STORE_NAME, USER_ID,\n",
+    "    DATETIME(SCAN_DATE) AS SCAN_DATE, STORE_NAME, TRIM(CAST( USER_ID AS TEXT)) AS USER_ID,\n",
     "    FINAL_QUANTITY AS cleanQty, FINAL_SALE\n",
     "    \n",
     "FROM transactions\n",
     "WHERE FINAL_QUANTITY != 'zero' AND \n",
     "        (CAST( barcode AS TEXT) IS NOT NULL AND CAST( barcode AS TEXT) NOT IN (-1.0,'-1.0'))\n",
     "GROUP BY CAST( barcode AS TEXT), RECEIPT_ID, DATETIME(PURCHASE_DATE), DATETIME(SCAN_DATE), \n",
-    "             STORE_NAME, USER_ID, FINAL_QUANTITY, FINAL_SALE\"\"\") \n",
+    "             STORE_NAME, TRIM(CAST( USER_ID AS TEXT)), FINAL_QUANTITY, FINAL_SALE\"\"\") \n",
     "\n",
     "\n",
     "# Cleaning USERS data, remove duplicates, remove nulls\n",
     "\n",
     "conn.execute( \"\"\"CREATE TABLE users_cleaned AS \n",
     "SELECT \n",
-    "    ID, \n",
+    "    TRIM(CAST(ID AS TEXT)) AS ID, \n",
     "    DATETIME(CREATED_DATE) AS CREATED_DATE, \n",
-    "    DATETIME(BIRTH_DATE) AS BIRTH_DATE, \n",
+    "    DATETIME(BIRTH_DATE) AS BIRTH_DATE,\n",
     "    STATE, LANGUAGE, GENDER\n",
     "FROM users\n",
     "WHERE ID IS NOT NULL\n",
-    "GROUP BY ID, DATETIME(CREATED_DATE), DATETIME(BIRTH_DATE), STATE, LANGUAGE, GENDER\"\"\") \n",
+    "GROUP BY TRIM(ID), DATETIME(CREATED_DATE), DATETIME(BIRTH_DATE), STATE, LANGUAGE, GENDER\"\"\") \n",
     "\n",
     "conn.commit()\n",
     "\n",
@@ -113,17 +113,26 @@
     "\n",
     "###This answers: Which is the leading brand in the Dips & Salsa category?\n",
     "\n",
+    "query1 = \"\"\" SELECT COUNT( DISTINCT USER_ID) AS Users_TransFile\n",
+    "FROM transactions_cleaned\n",
+    "LIMIT 1\n",
+    "\"\"\"\n",
     "\n",
-    "query2 = \"\"\"SELECT SUM(cleanQty), SUM(FINAL_SALE), COUNT(*), MIN(SCAN_DATE), MAX(SCAN_DATE)\n",
-    "FROM transactions_cleaned trs left join products_cleaned prd on trs.cleanBarcode = prd.cleanBarcode\"\"\"\n",
+    "query2 = \"\"\"SELECT DISTINCT ID\n",
+    "FROM users_cleaned\n",
+    "WHERE ID like '%6331418d64da09ffd9559b29%'\n",
+    "LIMIT 1\n",
+    "\"\"\"\n",
     "\n",
-    "query3 = \"\"\"SELECT SUM(cleanQty), SUM(FINAL_SALE), COUNT(*), MIN(PURCHASE_DATE), MAX(PURCHASE_DATE)\n",
-    "FROM transactions_cleaned trs\"\"\"\n",
+    "query3 = \"\"\"SELECT COUNT(DISTINCT USER_ID), SUM(cleanQty), SUM(FINAL_SALE), COUNT(*), MIN(PURCHASE_DATE), MAX(PURCHASE_DATE)\n",
+    "FROM transactions_cleaned trs left join users_cleaned on USER_ID = ID\n",
+    "WHERE ID IS NOT NULL\n",
+    "LIMIT 2 \"\"\"\n",
     "\n",
-    "#df = pd.read_sql_query(query1, conn)\n",
+    "df = pd.read_sql_query(query1, conn)\n",
     "df2 = pd.read_sql_query(query2, conn)\n",
     "df3 = pd.read_sql_query(query3, conn)\n",
-    "#print(df)\n",
+    "print(df)\n",
     "print(df2)\n",
     "print(df3)\n"
    ]
