--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Users_TransFile\n",
-      "0            16062\n",
+      "   COUNT(DISTINCT cleanBarcode)\n",
+      "0                         11026\n",
       "Empty DataFrame\n",
       "Columns: [ID]\n",
       "Index: []\n",
-      "   COUNT(DISTINCT USER_ID)  SUM(cleanQty)  SUM(FINAL_SALE)  COUNT(*)  \\\n",
-      "0                       84          178.0           541.12       173   \n",
-      "\n",
-      "    MIN(PURCHASE_DATE)   MAX(PURCHASE_DATE)  \n",
-      "0  2024-06-12 00:00:00  2024-09-08 00:00:00  \n"
+      "   COUNT(DISTINCT trs.cleanBarcode)\n",
+      "0                               281\n"
      ]
     }
    ],
@@ -113,7 +110,7 @@
     "\n",
     "###This answers: Which is the leading brand in the Dips & Salsa category?\n",
     "\n",
-    "query1 = \"\"\" SELECT COUNT( DISTINCT USER_ID) AS Users_TransFile\n",
+    "query1 = \"\"\" SELECT COUNT(DISTINCT cleanBarcode)\n",
     "FROM transactions_cleaned\n",
     "LIMIT 1\n",
     "\"\"\"\n",
@@ -124,9 +121,8 @@
     "LIMIT 1\n",
     "\"\"\"\n",
     "\n",
-    "query3 = \"\"\"SELECT COUNT(DISTINCT USER_ID), SUM(cleanQty), SUM(FINAL_SALE), COUNT(*), MIN(PURCHASE_DATE), MAX(PURCHASE_DATE)\n",
-    "FROM transactions_cleaned trs left join users_cleaned on USER_ID = ID\n",
-    "WHERE ID IS NOT NULL\n",
+    "query3 = \"\"\"SELECT COUNT(DISTINCT trs.cleanBarcode)\n",
+    "FROM transactions_cleaned trs inner join products_cleaned prd on trs.cleanBarcode = prd.cleanBarcode\n",
     "LIMIT 2 \"\"\"\n",
     "\n",
     "df = pd.read_sql_query(query1, conn)\n",
