--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   COUNT(DISTINCT cleanBarcode)\n",
-      "0                         11026\n",
+      "                    USER_ID  SUM(cleanQty)  SUM(FINAL_SALE)\n",
+      "0  65e4bc2716cc391732143569            9.0            88.37\n",
+      "1  60a5363facc00d347abadc8e           44.0            84.58\n",
+      "2  6183300cf998e47aad2d6f5d           11.1            82.28\n",
+      "3  6475fd16a55bb77a0e279ee0            4.0            77.80\n",
+      "4  643059f0838dd2651fb27f50            4.0            75.99\n",
+      "5  5d61b8e71ddc4058bd98f776            3.0            71.97\n",
+      "6  61aac8177c22c7641cc08fc4            6.0            70.66\n",
+      "7  642734743d4434e63c191488            1.0            69.20\n",
+      "8  636585d638ad5816d3937372            1.0            64.87\n",
+      "9  60c0aabdc66e105658856688            4.0            64.43\n",
       "Empty DataFrame\n",
       "Columns: [ID]\n",
       "Index: []\n",
@@ -95,7 +104,7 @@
     "\"\"\"\n",
     "\n",
     "###Testing the transactions file\n",
-    "queryC = \"\"\" SELECT COUNT(*)\n",
+    "query1 = \"\"\" SELECT COUNT(*), MIN(PURCHASE_DATE), MAX(PURCHASE_DATE)\n",
     "FROM transactions_cleaned\n",
     "WHERE cleanBarcode is null\n",
     "LIMIT 10\n",
@@ -108,11 +117,13 @@
     "GROUP BY BRAND\n",
     "ORDER BY SUM(FINAL_SALE) DESC\"\"\"\n",
     "\n",
-    "###This answers: Which is the leading brand in the Dips & Salsa category?\n",
+    "###This answers: Who are Fetch’s power users?\n",
     "\n",
-    "query1 = \"\"\" SELECT COUNT(DISTINCT cleanBarcode)\n",
+    "queryE = \"\"\" SELECT USER_ID, SUM(cleanQty), SUM(FINAL_SALE)\n",
     "FROM transactions_cleaned\n",
-    "LIMIT 1\n",
+    "GROUP BY USER_ID\n",
+    "ORDER BY SUM(FINAL_SALE) DESC\n",
+    "LIMIT 10\n",
     "\"\"\"\n",
     "\n",
     "query2 = \"\"\"SELECT DISTINCT ID\n",
