--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -21,11 +21,9 @@
       "7  642734743d4434e63c191488            1.0            69.20\n",
       "8  636585d638ad5816d3937372            1.0            64.87\n",
       "9  60c0aabdc66e105658856688            4.0            64.43\n",
-      "Empty DataFrame\n",
-      "Columns: [ID]\n",
-      "Index: []\n",
-      "   COUNT(DISTINCT trs.cleanBarcode)\n",
-      "0                               281\n"
+      "              BRAND  UniqueReceipts\n",
+      "0              None             111\n",
+      "1  DEAN'S DAIRY DIP               1\n"
      ]
     }
    ],
@@ -126,21 +124,19 @@
     "LIMIT 10\n",
     "\"\"\"\n",
     "\n",
-    "query2 = \"\"\"SELECT DISTINCT ID\n",
-    "FROM users_cleaned\n",
-    "WHERE ID like '%6331418d64da09ffd9559b29%'\n",
-    "LIMIT 1\n",
+    "###This answers: What are the top 5 brands by receipts scanned among users 21 and over?\n",
+    "queryF = \"\"\"SELECT BRAND, COUNT(DISTINCT RECEIPT_ID) AS UniqueReceipts\n",
+    "FROM transactions_cleaned trs \n",
+    "INNER JOIN products_cleaned prd on trs.cleanBarcode = prd.cleanBarcode\n",
+    "INNER JOIN users_cleaned urs on ID = USER_ID\n",
+    "WHERE CAST((julianday('now') - julianday(date(BIRTH_DATE))) / 365.25 AS INTEGER) >= 21\n",
+    "GROUP BY BRAND\n",
+    "ORDER BY COUNT(DISTINCT RECEIPT_ID) DESC\n",
     "\"\"\"\n",
     "\n",
-    "query3 = \"\"\"SELECT COUNT(DISTINCT trs.cleanBarcode)\n",
-    "FROM transactions_cleaned trs inner join products_cleaned prd on trs.cleanBarcode = prd.cleanBarcode\n",
-    "LIMIT 2 \"\"\"\n",
-    "\n",
-    "df = pd.read_sql_query(query1, conn)\n",
-    "df2 = pd.read_sql_query(query2, conn)\n",
+    "df = pd.read_sql_query(queryE, conn)\n",
     "df3 = pd.read_sql_query(query3, conn)\n",
     "print(df)\n",
-    "print(df2)\n",
     "print(df3)\n"
    ]
   }
