--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -10,20 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "              BRAND  UniqueReceipts\n",
+      "0  DEAN'S DAIRY DIP               1\n",
       "                    USER_ID  SUM(cleanQty)  SUM(FINAL_SALE)\n",
       "0  65e4bc2716cc391732143569            9.0            88.37\n",
       "1  60a5363facc00d347abadc8e           44.0            84.58\n",
       "2  6183300cf998e47aad2d6f5d           11.1            82.28\n",
       "3  6475fd16a55bb77a0e279ee0            4.0            77.80\n",
       "4  643059f0838dd2651fb27f50            4.0            75.99\n",
-      "5  5d61b8e71ddc4058bd98f776            3.0            71.97\n",
-      "6  61aac8177c22c7641cc08fc4            6.0            70.66\n",
-      "7  642734743d4434e63c191488            1.0            69.20\n",
-      "8  636585d638ad5816d3937372            1.0            64.87\n",
-      "9  60c0aabdc66e105658856688            4.0            64.43\n",
-      "              BRAND  UniqueReceipts\n",
-      "0              None             111\n",
-      "1  DEAN'S DAIRY DIP               1\n"
+      "              BRAND  SUM(cleanQty)  SUM(FINAL_SALE)  COUNT(*)\n",
+      "0  DEAN'S DAIRY DIP           22.0            39.95        22\n"
      ]
     }
    ],
@@ -113,7 +109,8 @@
     "FROM transactions_cleaned trs left join products_cleaned prd on trs.cleanBarcode = prd.cleanBarcode\n",
     "WHERE CATEGORY_2 like '%Dips & Salsa%'\n",
     "GROUP BY BRAND\n",
-    "ORDER BY SUM(FINAL_SALE) DESC\"\"\"\n",
+    "ORDER BY SUM(FINAL_SALE) DESC\n",
+    "LIMIT 1\"\"\"\n",
     "\n",
     "###This answers: Who are Fetch’s power users?\n",
     "\n",
@@ -121,7 +118,7 @@
     "FROM transactions_cleaned\n",
     "GROUP BY USER_ID\n",
     "ORDER BY SUM(FINAL_SALE) DESC\n",
-    "LIMIT 10\n",
+    "LIMIT 5\n",
     "\"\"\"\n",
     "\n",
     "###This answers: What are the top 5 brands by receipts scanned among users 21 and over?\n",
@@ -132,12 +129,15 @@
     "WHERE CAST((julianday('now') - julianday(date(BIRTH_DATE))) / 365.25 AS INTEGER) >= 21\n",
     "GROUP BY BRAND\n",
     "ORDER BY COUNT(DISTINCT RECEIPT_ID) DESC\n",
+    "LIMIT 5\n",
     "\"\"\"\n",
     "\n",
-    "df = pd.read_sql_query(queryE, conn)\n",
-    "df3 = pd.read_sql_query(query3, conn)\n",
-    "print(df)\n",
-    "print(df3)\n"
+    "Top5Brands = pd.read_sql_query(queryF, conn)\n",
+    "PowerUsers = pd.read_sql_query(queryE, conn)\n",
+    "DipsNSalsa = pd.read_sql_query(queryD, conn)\n",
+    "print(Top5Brands)\n",
+    "print(PowerUsers)\n",
+    "print(DipsNSalsa)\n"
    ]
   }
  ],
