--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
     "\"\"\"\n",
     "\n",
     "###Testing the transactions file\n",
-    "query1 = \"\"\" SELECT COUNT(*), MIN(PURCHASE_DATE), MAX(PURCHASE_DATE)\n",
+    "queryC = \"\"\" SELECT COUNT(*), MIN(PURCHASE_DATE), MAX(PURCHASE_DATE)\n",
     "FROM transactions_cleaned\n",
     "WHERE cleanBarcode is null\n",
     "LIMIT 10\n",
