--- a/anaysis.ipynb
+++ b/anaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "306c3b1a",
    "metadata": {},
    "outputs": [
@@ -19,7 +19,21 @@
       "3  6475fd16a55bb77a0e279ee0            4.0            77.80\n",
       "4  643059f0838dd2651fb27f50            4.0            75.99\n",
       "              BRAND  SUM(cleanQty)  SUM(FINAL_SALE)  COUNT(*)\n",
-      "0  DEAN'S DAIRY DIP           22.0            39.95        22\n"
+      "0  DEAN'S DAIRY DIP           22.0            39.95        22\n",
+      "           Day  salesTotal  RunningWeeklyAvg\n",
+      "0   2024-06-12      978.26            978.26\n",
+      "1   2024-06-13     1018.28            998.27\n",
+      "2   2024-06-14     1131.80           1042.78\n",
+      "3   2024-06-15     1536.64           1166.25\n",
+      "4   2024-06-16     1083.56           1149.71\n",
+      "..         ...         ...               ...\n",
+      "84  2024-09-04      854.50           1116.68\n",
+      "85  2024-09-05      921.75           1088.94\n",
+      "86  2024-09-06      909.08           1045.44\n",
+      "87  2024-09-07      873.68            980.15\n",
+      "88  2024-09-08      446.75            858.24\n",
+      "\n",
+      "[89 rows x 3 columns]\n"
      ]
     }
    ],
@@ -132,12 +146,30 @@
     "LIMIT 5\n",
     "\"\"\"\n",
     "\n",
+    "###This is my new insight. Examining sales over time\n",
+    "queryG = \"\"\" SELECT \n",
+    "  DATE(PURCHASE_DATE) AS Day,\n",
+    "  SUM(FINAL_SALE) AS salesTotal,\n",
+    "  ROUND(AVG(SUM(FINAL_SALE)) OVER (\n",
+    "      ORDER BY DATE(PURCHASE_DATE)\n",
+    "      ROWS BETWEEN 6 PRECEDING AND CURRENT ROW\n",
+    "  ), 2) AS RunningWeeklyAvg\n",
+    "FROM transactions_cleaned\n",
+    "GROUP BY DATE(PURCHASE_DATE)\n",
+    "ORDER BY day\n",
+    "\"\"\"\n",
+    "\n",
     "Top5Brands = pd.read_sql_query(queryF, conn)\n",
     "PowerUsers = pd.read_sql_query(queryE, conn)\n",
     "DipsNSalsa = pd.read_sql_query(queryD, conn)\n",
+    "NewInsight = pd.read_sql_query(queryG, conn)\n",
+    "NewInsight.to_csv(\"Sales_Trend.csv\", index=False)\n",
+    "\n",
     "print(Top5Brands)\n",
     "print(PowerUsers)\n",
-    "print(DipsNSalsa)\n"
+    "print(DipsNSalsa)\n",
+    "print(NewInsight)\n",
+    "\n"
    ]
   }
  ],
